# synapbus

./: .dockerignore  .gitignore  BOOTSTRAP_PROMPT.md  CLAUDE.md  Dockerfile  IDEA.md  Makefile  README.md  agent_marketplace_guide_ru.html  autonomous_summary.md  autonomous_summary_2026-04-11.md  docker-compose.yml  go.mod  go.sum  logo-options.md  multiagent_systems_report.html
.github/workflows/: ci.yml  release.yml
cmd/docgardener/: agent.go  channels.go  flow.go  gemini_tree.go  main.go  report.go  template.go
cmd/plugindemo/: main.go
cmd/synapbus/: admin.go  admin_test.go  goals_adapter.go  main.go  secrets_cli.go
deploy/kubic/: README.md  deployment.yaml  namespace.yaml  otel-collector.yaml  pvc.yaml  secret.example.yaml  service.yaml
docs/: harness-otel-design.md  harness-otel-research.html
docs/agent-skills/: stigmergy-workflow.md  task-auction.md
dream-agent/: Dockerfile  README.md  dream_runner.py  k8s-job-template.yaml  pyproject.toml
examples/: README.md
examples/cold-topic-explainer/: .gitignore  README.md  run_task.sh  start.sh  stop.sh  wrapper.sh
examples/doc-gardener/: .gitignore  README.md  report.sh  run_task.sh  start.sh  stop.sh
examples/goal-coordinator/: .gitignore  README.md  run_task.sh  start.sh  stop.sh  wrapper.sh
image-build/: README.md
image-build/synapbus-agent/: Dockerfile  synapbus-agent-wrapper.sh
internal/a2a/: agentcard.go  (+2 more)
schema/: 002_channels.sql  003_trace_logging.sql  009_webhooks.sql
scripts/: deploy-kubic.sh
web/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
(+490 files in other folders)
